tests/snapshots/snapshots__snapshot_mixed_content_w80.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Project Architecture[0m

[38;2;190;180;160mThis document mixes prose, code, and diagrams to demonstrate [0m[1;38;2;190;180;160mmdx[0m[38;2;190;180;160m handling real-world documentation.[0m

[1;38;2;180;90;60m## Request Lifecycle[0m

[38;2;190;180;160mWhen a user makes an API call, the request flows through several stages:[0m

[38;2;180;90;60m┌────────┐[0m      [38;2;180;90;60m┌───────────────┐[0m      [38;2;180;90;60m┌─────────────────┐[0m              [38;2;180;90;60m/\[0m              [38;2;180;90;60m┌────────┐[0m      [38;2;180;90;60m┌─────────┐[0m      [38;2;180;90;60m┌──────────┐[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mClient[0m [38;2;180;90;60m│[0m──────[38;2;180;90;60m│[0m [38;2;190;180;160mLoad Balancer[0m [38;2;180;90;60m│[0m──────[38;2;180;90;60m│[0m [38;2;190;180;160mAuth Middleware[0m [38;2;180;90;60m│[0m──────        [38;2;180;90;60m/[0m [38;2;180;90;60m\[0m       ──────[38;2;180;90;60m│[0m [38;2;190;180;160mRouter[0m [38;2;180;90;60m│[0m──────[38;2;180;90;60m│[0m [38;2;190;180;160mHandler[0m [38;2;180;90;60m│[0m──────[38;2;180;90;60m│[0m [38;2;190;180;160mDatabase[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└────────┘[0m      [38;2;180;90;60m└───────────────┘[0m      [38;2;180;90;60m└─────────────────┘[0m             [38;2;180;90;60m/[0m   [38;2;180;90;60m\[0m            [38;2;180;90;60m└────────┘[0m      [38;2;180;90;60m└─────────┘[0m      [38;2;180;90;60m└──────────┘[0m
     │                  │                       │                     [38;2;180;90;60m/[0m     [38;2;180;90;60m\[0m                │               │                 │
                                                                     [38;2;180;90;60m/[0m       [38;2;180;90;60m\[0m               │
                                                                    [38;2;180;90;60m/[0m         [38;2;180;90;60m\[0m              │
                                                                   [38;2;180;90;60m/[0m           [38;2;180;90;60m\[0m             │
                                                                  [38;2;180;90;60m/[0m             [38;2;180;90;60m\[0m[38;2;130;140;110mYes[0m         │
                                                                 [38;2;180;90;60m/[0m[38;2;190;180;160mAuthenticated?[0m [38;2;180;90;60m\[0m───────────┘
                                                                  [38;2;180;90;60m\[0m             [38;2;180;90;60m/[0m
                                                                   [38;2;180;90;60m\[0m           [38;2;180;90;60m/[0m
                                                                    [38;2;180;90;60m\[0m         [38;2;180;90;60m/[0m
                                                                     [38;2;180;90;60m\[0m       [38;2;180;90;60m/[0m
                                                                      [38;2;180;90;60m\[0m     [38;2;180;90;60m/[0m
                                                                       [38;2;180;90;60m\[0m   [38;2;180;90;60m/[0m
                                                                        [38;2;180;90;60m\[0m [38;2;180;90;60m/[0m
                                                                        [38;2;180;90;60m\/[0m
                                                                         │
                                                                    [38;2;130;140;110mNo[0m   │
                                                                  ┌──────┘
                                                                  ▼
                                                             [38;2;180;90;60m┌────────┐[0m
                                                             [38;2;180;90;60m│[0m [38;2;190;180;160mReject[0m [38;2;180;90;60m│[0m
                                                             [38;2;180;90;60m└────────┘[0m

[38;2;190;180;160mThe [0m[1;38;2;190;180;160mAuth Middleware[0m[38;2;190;180;160m checks the JWT token and validates it against our key store.[0m [38;2;190;180;160mIf the token is expired or invalid, the request is rejected with a [0m[2;38;2;160;120;60m401[0m[38;2;190;180;160m status.[0m

[1;38;2;180;90;60m## Handler Example[0m

[38;2;190;180;160mEach route handler follows this pattern:[0m

[38;2;90;80;60m  [rust][0m
  [38;2;192;197;206masync [0m[38;2;180;142;173mfn[0m[38;2;192;197;206m [0m[38;2;143;161;179mget_user[0m[38;2;192;197;206m([0m[38;2;192;197;206mPath[0m[38;2;192;197;206m([0m[38;2;191;97;106mid[0m[38;2;192;197;206m)[0m[38;2;192;197;206m: [0m[38;2;192;197;206mPath[0m[38;2;192;197;206m<[0m[38;2;180;142;173mu64[0m[38;2;192;197;206m>[0m[38;2;192;197;206m, State[0m[38;2;192;197;206m([0m[38;2;191;97;106mdb[0m[38;2;192;197;206m)[0m[38;2;192;197;206m: [0m[38;2;192;197;206mState[0m[38;2;192;197;206m<[0m[38;2;192;197;206mPool[0m[38;2;192;197;206m>[0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m->[0m[38;2;192;197;206m [0m[38;2;192;197;206mResult[0m[38;2;192;197;206m<[0m[38;2;192;197;206mJson[0m[38;2;192;197;206m<[0m[38;2;192;197;206mUser[0m[38;2;192;197;206m>[0m[38;2;192;197;206m>[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mlet[0m[38;2;192;197;206m user [0m[38;2;192;197;206m=[0m[38;2;192;197;206m db.[0m[38;2;150;181;180mquery[0m[38;2;192;197;206m([0m[38;2;192;197;206m"[0m[38;2;163;190;140mSELECT * FROM users WHERE id = $1[0m[38;2;192;197;206m"[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;192;197;206m&[0m[38;2;192;197;206m[[0m[38;2;192;197;206m&[0m[38;2;192;197;206mid[0m[38;2;192;197;206m][0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m        .await[0m[38;2;192;197;206m?[0m
  [38;2;192;197;206m        .[0m[38;2;150;181;180minto_first[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m[38;2;192;197;206m?[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206mOk[0m[38;2;192;197;206m([0m[38;2;192;197;206mJson[0m[38;2;192;197;206m([0m[38;2;192;197;206muser[0m[38;2;192;197;206m)[0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m}[0m

[1;38;2;180;90;60m## Deployment[0m

[38;2;190;180;160mWe use a blue-green deployment strategy:[0m

                                                                                           [38;2;180;90;60m┌────────────────┐[0m
                                                                                         ┌►[38;2;180;90;60m│[0m [38;2;190;180;160mSwitch Traffic[0m [38;2;180;90;60m│[0m───┐
                                                                                         │[38;2;130;140;110mYes[0m[38;2;180;90;60m───────────────┘[0m   │
[38;2;180;90;60m┌──────────────┐[0m      [38;2;180;90;60m┌─────────────┐[0m      [38;2;180;90;60m┌──────────────┐[0m      [38;2;180;90;60m/──────────────────\[0m    │                      │  [38;2;180;90;60m╭──────╮[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mPush to main[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mBuild Image[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mDeploy Green[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m<[0m [38;2;190;180;160mHealth Check OK?[0m [38;2;180;90;60m>[0m───┬┘                      └─►[38;2;180;90;60m│[0m [38;2;190;180;160mLive[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└──────────────┘[0m      [38;2;180;90;60m└─────────────┘[0m      [38;2;180;90;60m└──────────────┘[0m      [38;2;180;90;60m\──────────────────/[0m   │                          [38;2;180;90;60m╰──────╯[0m
                                                                                        │[38;2;130;140;110mNo[0m
                                                                                        │  [38;2;180;90;60m┌──────────┐[0m
                                                                                        └─►[38;2;180;90;60m│[0m [38;2;190;180;160mRollback[0m [38;2;180;90;60m│[0m
                                                                                           [38;2;180;90;60m└──────────┘[0m

[2;38;2;90;80;60m────────────────────────────────────────────────────────────────────────────────[0m
[1;38;2;180;90;60m## Quick Reference[0m

  * [1;38;2;190;180;160mAuth[0m[38;2;190;180;160m: JWT tokens, 1h expiry[0m
  * [1;38;2;190;180;160mDatabase[0m[38;2;190;180;160m: PostgreSQL 16[0m
  * [1;38;2;190;180;160mCache[0m[38;2;190;180;160m: Redis for sessions[0m
  * [1;38;2;190;180;160mDeploy[0m[38;2;190;180;160m: Blue-green via [0m[2;38;2;160;120;60mkubectl[0m
