tests/snapshots/snapshots__snapshot_seq_basic_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Test: Basic Sequence[0m

[38;2;180;90;60m┌───────┐[0m               [38;2;180;90;60m┌─────┐[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mAlice[0m [38;2;180;90;60m│[0m               [38;2;180;90;60m│[0m [38;2;190;180;160mBob[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└───────┘[0m               [38;2;180;90;60m└─────┘[0m
    │                      │
    ╎      [38;2;130;140;110mHello Bob[0m       ╎
    │[38;2;120;160;80m────────────────────>>[0m│
    ╎      [38;2;130;140;110mHi Alice[0m        ╎
    [38;2;120;160;80m<<─────────────────────[0m│
