tests/snapshots/snapshots__snapshot_seq_basic_w80.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Test: Basic Sequence[0m

┌───────┐               ┌─────┐
│ Alice │               │ Bob │
└───────┘               └─────┘
    │                      │
    ╎      Hello Bob       ╎
    │────────────────────>>│
    ╎      Hi Alice        ╎
    <<─────────────────────│
