tests/snapshots/snapshots__snapshot_seq_complex_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Test: Complex Sequence (API Auth Flow)[0m

┌────────┐                   ┌─────────┐                     ┌──────┐                ┌─────┐               ┌────┐
│ Client │                   │ Gateway │                     │ Auth │                │ API │               │ DB │
└────────┘                   └─────────┘                     └──────┘                └─────┘               └────┘
     │                            │                              │                      │                     │
     ╎      1. POST /login        ╎                              ╎                      ╎                     ╎
     │──────────────────────────>>│                              │                      │                     │
     ╎                            ╎   2. Validate credentials    ╎                      ╎                     ╎
     │                            │────────────────────────────>┌─┐                     │                     │
     ╎                            ╎                             │ │             3. SELECT user                ╎
     │                            │                             │ │─────────────────────────────────────────>>│
     ╎                            ╎                             │ │             4. User record                ╎
     │                            │                             │ │ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ │
┌─ alt [Valid credentials] ─────────────────────────────────────│ │───────────────────────────────────────────────┐
│    │                            │                             │ │┐ 5. Generate JWT    │                     │   │
│    ╎                            ╎                             │ ││                    ╎                     ╎   │
│    │                            │                             │ │┘                    │                     │   │
│    ╎                            ╎       6. 200 + token        │ │                     ╎                     ╎   │
│    │                            <<─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ └─┘                     │                     │   │
│    ╎   7. Set-Cookie: token     ╎                              ╎                      ╎                     ╎   │
│    << ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ │                              │                      │                     │   │
│    ╎       8. GET /data         ╎                              ╎                      ╎                     ╎   │
│    │──────────────────────────>>│                              │                      │                     │   │
│    ╎                            ╎       9. Verify token        ╎                      ╎                     ╎   │
│    │                            │────────────────────────────>┌─┐                     │                     │   │
│    ╎                            ╎       10. Token valid       │ │                     ╎                     ╎   │
│    │                            <<─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ └─┘                     │                     │   │
│    ╎                            ╎                11. Forward request                  ╎                     ╎   │
│    │                            │───────────────────────────────────────────────────>┌─┐                    │   │
│    ╎                            ╎                              ╎                     │ │  12. Query data    ╎   │
│    │                            │                              │                     │ │──────────────────>>│   │
│    ╎                            ╎                              ╎                     │ │   13. Results      ╎   │
│    │                            │                              │                     │ │─ ─ ─ ─ ─ ─ ─ ─ ─ ─ │   │
│    ╎                            ╎                     14. 200 OK                     │ │                    ╎   │
│    │                            <<─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─└─┘                    │   │
│    ╎        15. 200 OK          ╎                              ╎                      ╎                     ╎   │
│    << ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ │                              │                      │                     │   │
├─ [Invalid credentials] ─────────────────────────────────────────────────────────────────────────────────────────┤
│    │                            │    16. 401 Unauthorized      │                      │                     │   │
│    ╎                            <<─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─╎                      ╎                     ╎   │
│    │   17. 401 Unauthorized     │                              │                      │                     │   │
│    << ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ╎                              ╎                      ╎                     ╎   │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────┐                         ╎                      ╎                     ╎
│          Connection closed           │                         │                      │                     │
└──────────────────────────────────────┘                         ╎                      ╎                     ╎
