tests/snapshots/snapshots__snapshot_syntax_highlight_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Syntax Highlighting Demo[0m

[1;38;2;180;90;60m## Rust[0m

[2;90m  [rust][0m
  [38;2;180;142;173muse[0m[38;2;192;197;206m [0m[38;2;192;197;206mstd[0m[38;2;192;197;206m::[0m[38;2;192;197;206mcollections[0m[38;2;192;197;206m::[0m[38;2;192;197;206mHashMap[0m[38;2;192;197;206m;[0m
  
  [38;2;180;142;173mfn[0m[38;2;192;197;206m [0m[38;2;143;161;179mmain[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mlet[0m[38;2;192;197;206m [0m[38;2;180;142;173mmut[0m[38;2;192;197;206m scores[0m[38;2;192;197;206m:[0m[38;2;192;197;206m [0m[38;2;192;197;206mHashMap[0m[38;2;192;197;206m<[0m[38;2;192;197;206m&[0m[38;2;180;142;173mstr[0m[38;2;192;197;206m, [0m[38;2;180;142;173mi32[0m[38;2;192;197;206m>[0m[38;2;192;197;206m [0m[38;2;192;197;206m=[0m[38;2;192;197;206m [0m[38;2;192;197;206mHashMap[0m[38;2;192;197;206m::[0m[38;2;192;197;206mnew[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    scores.[0m[38;2;150;181;180minsert[0m[38;2;192;197;206m([0m[38;2;192;197;206m"[0m[38;2;163;190;140mAlice[0m[38;2;192;197;206m"[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;208;135;112m42[0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    scores.[0m[38;2;150;181;180minsert[0m[38;2;192;197;206m([0m[38;2;192;197;206m"[0m[38;2;163;190;140mBob[0m[38;2;192;197;206m"[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;208;135;112m99[0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  
  [38;2;192;197;206m    [0m[38;2;180;142;173mfor[0m[38;2;192;197;206m [0m[38;2;192;197;206m([0m[38;2;192;197;206mname[0m[38;2;192;197;206m,[0m[38;2;192;197;206m score[0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206min[0m[38;2;192;197;206m [0m[38;2;192;197;206m&[0m[38;2;192;197;206mscores [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m        [0m[38;2;192;197;206mprintln![0m[38;2;192;197;206m([0m[38;2;192;197;206m"[0m[38;2;208;135;112m{name}[0m[38;2;163;190;140m: [0m[38;2;208;135;112m{score}[0m[38;2;192;197;206m"[0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206m}[0m
  [38;2;192;197;206m}[0m

[1;38;2;180;90;60m## Python[0m

[2;90m  [python][0m
  [38;2;180;142;173mfrom[0m[38;2;192;197;206m [0m[38;2;192;197;206mdataclasses[0m[38;2;192;197;206m [0m[38;2;180;142;173mimport[0m[38;2;192;197;206m [0m[38;2;192;197;206mdataclass[0m
  [38;2;180;142;173mfrom[0m[38;2;192;197;206m [0m[38;2;192;197;206mtyping[0m[38;2;192;197;206m [0m[38;2;180;142;173mimport[0m[38;2;192;197;206m [0m[38;2;192;197;206mOptional[0m
  
  [38;2;192;197;206m@[0m[38;2;191;97;106mdataclass[0m
  [38;2;180;142;173mclass[0m[38;2;239;241;245m [0m[38;2;235;203;139mUser[0m[38;2;239;241;245m:[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206mname[0m[38;2;192;197;206m:[0m[38;2;192;197;206m [0m[38;2;192;197;206mstr[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206memail[0m[38;2;192;197;206m:[0m[38;2;192;197;206m [0m[38;2;192;197;206mstr[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206mage[0m[38;2;192;197;206m:[0m[38;2;192;197;206m [0m[38;2;192;197;206mOptional[0m[38;2;192;197;206m[[0m[38;2;192;197;206mint[0m[38;2;192;197;206m][0m[38;2;192;197;206m [0m[38;2;192;197;206m=[0m[38;2;192;197;206m [0m[38;2;208;135;112mNone[0m
  
  [38;2;192;197;206m    [0m[38;2;180;142;173mdef[0m[38;2;192;197;206m [0m[38;2;143;161;179mgreet[0m[38;2;192;197;206m([0m[38;2;191;97;106mself[0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m->[0m[38;2;192;197;206m [0m[38;2;192;197;206mstr[0m[38;2;192;197;206m:[0m
  [38;2;192;197;206m        [0m[38;2;180;142;173mreturn[0m[38;2;192;197;206m [0m[38;2;180;142;173mf[0m[38;2;192;197;206m"[0m[38;2;163;190;140mHello, [0m[38;2;192;197;206m{[0m[38;2;191;97;106mself[0m[38;2;192;197;206m.[0m[38;2;192;197;206mname[0m[38;2;192;197;206m}[0m[38;2;163;190;140m![0m[38;2;192;197;206m"[0m
  
  [38;2;192;197;206musers[0m[38;2;192;197;206m [0m[38;2;192;197;206m=[0m[38;2;192;197;206m [0m[38;2;192;197;206m[[0m[38;2;143;161;179mUser[0m[38;2;192;197;206m([0m[38;2;192;197;206m"[0m[38;2;163;190;140mAlice[0m[38;2;192;197;206m"[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;163;190;140malice@example.com[0m[38;2;192;197;206m"[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;208;135;112m30[0m[38;2;192;197;206m)[0m[38;2;192;197;206m][0m
  [38;2;180;142;173mfor[0m[38;2;192;197;206m [0m[38;2;192;197;206muser[0m[38;2;192;197;206m [0m[38;2;180;142;173min[0m[38;2;192;197;206m [0m[38;2;192;197;206musers[0m[38;2;192;197;206m:[0m
  [38;2;192;197;206m    [0m[38;2;150;181;180mprint[0m[38;2;192;197;206m([0m[38;2;192;197;206muser[0m[38;2;192;197;206m.[0m[38;2;143;161;179mgreet[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m[38;2;192;197;206m)[0m

[1;38;2;180;90;60m## JavaScript / TypeScript[0m

[2;90m  [javascript][0m
  [38;2;180;142;173masync[0m[38;2;192;197;206m [0m[38;2;180;142;173mfunction[0m[38;2;192;197;206m [0m[38;2;143;161;179mfetchUsers[0m[38;2;192;197;206m([0m[38;2;192;197;206murl[0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m  [0m[38;2;180;142;173mtry[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mconst[0m[38;2;192;197;206m [0m[38;2;191;97;106mresponse[0m[38;2;192;197;206m [0m[38;2;192;197;206m=[0m[38;2;192;197;206m [0m[38;2;191;97;106mawait[0m[38;2;192;197;206m [0m[38;2;143;161;179mfetch[0m[38;2;192;197;206m([0m[38;2;192;197;206murl[0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mif[0m[38;2;192;197;206m [0m[38;2;192;197;206m([0m[38;2;192;197;206m![0m[38;2;191;97;106mresponse[0m[38;2;192;197;206m.[0m[38;2;192;197;206mok[0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m      [0m[38;2;180;142;173mthrow[0m[38;2;192;197;206m [0m[38;2;192;197;206mnew[0m[38;2;192;197;206m [0m[38;2;235;203;139mError[0m[38;2;192;197;206m([0m[38;2;192;197;206m`[0m[38;2;163;190;140mHTTP [0m[38;2;192;197;206m${[0m[38;2;191;97;106mresponse[0m[38;2;192;197;206m.[0m[38;2;192;197;206mstatus[0m[38;2;192;197;206m}[0m[38;2;192;197;206m`[0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206m}[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mconst[0m[38;2;192;197;206m [0m[38;2;191;97;106mdata[0m[38;2;192;197;206m [0m[38;2;192;197;206m=[0m[38;2;192;197;206m [0m[38;2;191;97;106mawait[0m[38;2;192;197;206m [0m[38;2;191;97;106mresponse[0m[38;2;192;197;206m.[0m[38;2;143;161;179mjson[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mreturn[0m[38;2;192;197;206m [0m[38;2;191;97;106mdata[0m[38;2;192;197;206m.[0m[38;2;192;197;206musers[0m[38;2;192;197;206m.[0m[38;2;143;161;179mfilter[0m[38;2;192;197;206m([0m[38;2;192;197;206mu[0m[38;2;192;197;206m [0m[38;2;180;142;173m=>[0m[38;2;192;197;206m [0m[38;2;191;97;106mu[0m[38;2;192;197;206m.[0m[38;2;192;197;206mactive[0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m  [0m[38;2;192;197;206m}[0m[38;2;192;197;206m [0m[38;2;180;142;173mcatch[0m[38;2;192;197;206m [0m[38;2;192;197;206m([0m[38;2;191;97;106merr[0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206mconsole[0m[38;2;192;197;206m.[0m[38;2;150;181;180merror[0m[38;2;192;197;206m([0m[38;2;192;197;206m"[0m[38;2;163;190;140mFailed to fetch:[0m[38;2;192;197;206m"[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;191;97;106merr[0m[38;2;192;197;206m.[0m[38;2;192;197;206mmessage[0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mreturn[0m[38;2;192;197;206m [0m[38;2;192;197;206m[[0m[38;2;192;197;206m][0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m  [0m[38;2;192;197;206m}[0m
  [38;2;192;197;206m}[0m

[1;38;2;180;90;60m## Go[0m

[2;90m  [go][0m
  [38;2;180;142;173mpackage[0m[38;2;192;197;206m main[0m
  
  [38;2;180;142;173mimport[0m[38;2;192;197;206m [0m[38;2;192;197;206m([0m
  [38;2;192;197;206m    [0m[38;2;192;197;206m"[0m[38;2;163;190;140mfmt[0m[38;2;192;197;206m"[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206m"[0m[38;2;163;190;140msync[0m[38;2;192;197;206m"[0m
  [38;2;192;197;206m)[0m
  
  [38;2;180;142;173mfunc[0m[38;2;192;197;206m [0m[38;2;143;161;179mworker[0m[38;2;192;197;206m([0m[38;2;191;97;106mid[0m[38;2;192;197;206m [0m[38;2;180;142;173mint[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;191;97;106mwg[0m[38;2;192;197;206m [0m[38;2;192;197;206m*[0m[38;2;192;197;206msync.WaitGroup[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;191;97;106mch[0m[38;2;192;197;206m [0m[38;2;192;197;206m<-[0m[38;2;180;142;173mchan[0m[38;2;192;197;206m [0m[38;2;180;142;173mstring[0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mdefer[0m[38;2;192;197;206m wg[0m[38;2;192;197;206m.[0m[38;2;143;161;179mDone[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mfor[0m[38;2;192;197;206m [0m[38;2;191;97;106mmsg[0m[38;2;192;197;206m [0m[38;2;192;197;206m:=[0m[38;2;192;197;206m [0m[38;2;180;142;173mrange[0m[38;2;192;197;206m ch [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m        fmt[0m[38;2;192;197;206m.[0m[38;2;143;161;179mPrintf[0m[38;2;192;197;206m([0m[38;2;192;197;206m"[0m[38;2;163;190;140mWorker [0m[38;2;208;135;112m%d[0m[38;2;163;190;140m: [0m[38;2;208;135;112m%s[0m[38;2;150;181;180m\n[0m[38;2;192;197;206m"[0m[38;2;192;197;206m,[0m[38;2;192;197;206m id[0m[38;2;192;197;206m,[0m[38;2;192;197;206m msg[0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206m}[0m
  [38;2;192;197;206m}[0m
  
  [38;2;180;142;173mfunc[0m[38;2;192;197;206m [0m[38;2;143;161;179mmain[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m    [0m[38;2;191;97;106mch[0m[38;2;192;197;206m [0m[38;2;192;197;206m:=[0m[38;2;192;197;206m [0m[38;2;150;181;180mmake[0m[38;2;192;197;206m([0m[38;2;180;142;173mchan[0m[38;2;192;197;206m [0m[38;2;180;142;173mstring[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;208;135;112m10[0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mvar[0m[38;2;192;197;206m [0m[38;2;191;97;106mwg[0m[38;2;192;197;206m sync[0m[38;2;192;197;206m.[0m[38;2;191;97;106mWaitGroup[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mfor[0m[38;2;192;197;206m [0m[38;2;191;97;106mi[0m[38;2;192;197;206m [0m[38;2;192;197;206m:=[0m[38;2;192;197;206m [0m[38;2;208;135;112m0[0m[38;2;192;197;206m; i [0m[38;2;192;197;206m<[0m[38;2;192;197;206m [0m[38;2;208;135;112m3[0m[38;2;192;197;206m; i[0m[38;2;192;197;206m+[0m[38;2;192;197;206m+[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m        wg[0m[38;2;192;197;206m.[0m[38;2;143;161;179mAdd[0m[38;2;192;197;206m([0m[38;2;208;135;112m1[0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m        [0m[38;2;180;142;173mgo[0m[38;2;192;197;206m [0m[38;2;143;161;179mworker[0m[38;2;192;197;206m([0m[38;2;192;197;206mi[0m[38;2;192;197;206m,[0m[38;2;192;197;206m [0m[38;2;192;197;206m&[0m[38;2;192;197;206mwg[0m[38;2;192;197;206m,[0m[38;2;192;197;206m ch[0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206m}[0m
  [38;2;192;197;206m    ch [0m[38;2;192;197;206m<-[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;163;190;140mhello[0m[38;2;192;197;206m"[0m
  [38;2;192;197;206m    [0m[38;2;150;181;180mclose[0m[38;2;192;197;206m([0m[38;2;192;197;206mch[0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m    wg[0m[38;2;192;197;206m.[0m[38;2;143;161;179mWait[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m}[0m

[1;38;2;180;90;60m## Shell[0m

[2;90m  [bash][0m
  [38;2;101;115;126m#![0m[38;2;101;115;126m/bin/[0m[38;2;208;135;112mbash[0m
  [38;2;150;181;180mset[0m[38;2;192;197;206m [0m[38;2;191;97;106m-[0m[38;2;191;97;106meuo[0m[38;2;192;197;206m [0m[38;2;163;190;140mpipefail[0m
  
  [38;2;180;142;173mreadonly[0m[38;2;192;197;206m [0m[38;2;191;97;106mLOG_DIR[0m[38;2;192;197;206m=[0m[38;2;192;197;206m"[0m[38;2;163;190;140m/var/log/app[0m[38;2;192;197;206m"[0m
  
  [38;2;143;161;179mcleanup[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m    [0m[38;2;150;181;180mecho[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;163;190;140mCleaning up temp files...[0m[38;2;192;197;206m"[0m
  [38;2;192;197;206m    [0m[38;2;143;161;179mrm[0m[38;2;192;197;206m [0m[38;2;191;97;106m-[0m[38;2;191;97;106mrf[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;192;197;206m$[0m[38;2;192;197;206m{[0m[38;2;191;97;106mTMPDIR[0m[38;2;192;197;206m:-[0m[38;2;163;190;140m/tmp[0m[38;2;192;197;206m}[0m[38;2;163;190;140m/build-*[0m[38;2;192;197;206m"[0m
  [38;2;192;197;206m}[0m
  [38;2;150;181;180mtrap[0m[38;2;192;197;206m [0m[38;2;143;161;179mcleanup[0m[38;2;192;197;206m [0m[38;2;208;135;112mEXIT[0m
  
  [38;2;180;142;173mfor[0m[38;2;192;197;206m [0m[38;2;191;97;106mfile[0m[38;2;192;197;206m [0m[38;2;180;142;173min[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;192;197;206m$[0m[38;2;191;97;106mLOG_DIR[0m[38;2;192;197;206m"[0m[38;2;163;190;140m/[0m[38;2;208;135;112m*[0m[38;2;163;190;140m.log[0m[38;2;192;197;206m;[0m[38;2;192;197;206m [0m[38;2;180;142;173mdo[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mif[0m[38;2;192;197;206m [0m[38;2;192;197;206m[[[0m[38;2;192;197;206m [0m[38;2;191;97;106m-[0m[38;2;191;97;106mf[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;192;197;206m$[0m[38;2;191;97;106mfile[0m[38;2;192;197;206m"[0m[38;2;192;197;206m [0m[38;2;192;197;206m]][0m[38;2;192;197;206m;[0m[38;2;192;197;206m [0m[38;2;180;142;173mthen[0m
  [38;2;192;197;206m        [0m[38;2;191;97;106mlines[0m[38;2;192;197;206m=[0m[38;2;192;197;206m$[0m[38;2;192;197;206m([0m[38;2;143;161;179mwc[0m[38;2;192;197;206m [0m[38;2;191;97;106m-[0m[38;2;191;97;106ml[0m[38;2;192;197;206m [0m[38;2;192;197;206m<[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;192;197;206m$[0m[38;2;191;97;106mfile[0m[38;2;192;197;206m"[0m[38;2;192;197;206m)[0m
  [38;2;192;197;206m        [0m[38;2;150;181;180mecho[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;192;197;206m$[0m[38;2;192;197;206m([0m[38;2;143;161;179mbasename[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;192;197;206m$[0m[38;2;191;97;106mfile[0m[38;2;192;197;206m"[0m[38;2;192;197;206m)[0m[38;2;163;190;140m: [0m[38;2;192;197;206m$[0m[38;2;191;97;106mlines[0m[38;2;163;190;140m lines[0m[38;2;192;197;206m"[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mfi[0m
  [38;2;180;142;173mdone[0m

[1;38;2;180;90;60m## No Language Tag (fallback)[0m

[2;90m  This block has no language specified.[0m
[2;90m  It should render in plain dim monochrome.[0m
[2;90m  No syntax highlighting here.[0m

[1;38;2;180;90;60m## Unknown Language[0m

[2;90m  [brainfuck][0m
[2;90m  ++++++++[>++++[>++>+++>+++>+<<<<-]>+>+>->>+[<]<-][0m
